// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should consume a message from a queue 1`] = `
Object {
  "webhook": "https://localhost.com:5003",
  "payload": Object {
    "message": "test",
  },
  "tryTimes": 0,
  "updatedAt": 1,
}
`;

exports[`should consume a message from a queue 2`] = `
Object {
  "1": Array [],
  "2": Array [],
  "3": Array [],
  "4": Array [],
  "5": Array [],
  "6": Array [],
  "7": Array [],
}
`;

exports[`should publish a message to queue 1`] = `
Object {
  "1": Array [
    "{\\"webhook\\":\\"https://localhost.com:5003\\",\\"payload\\":{\\"message\\":\\"test\\"}}",
  ],
  "2": Array [],
  "3": Array [],
  "4": Array [],
  "5": Array [],
  "6": Array [],
  "7": Array [],
}
`;

exports[`should return undefined if does not have messages to consume 1`] = `undefined`;
